update link to plugin

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = balor
-version = 0.0.1
+version = 0.0.2
 description = Balor
 long_description_content_type=text/markdown
 long_description = file: README.md
@@ -37,4 +37,4 @@ max-line-length=100
 universal=1
 
 [options.entry_points]
-meerk40t.plugins = Balor = mkplugin.main:plugin
+meerk40t.plugins = Balor = balor.main:plugin
