--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
 name = balor
-version = 0.0.2
+version = 0.0.3
 description = Balor
 long_description_content_type=text/markdown
 long_description = file: README.md
 classifiers =
-    Development Status :: 5 - Production/Stable
-    License :: OSI Approved :: MIT License
+    Development Status :: 3 - Alpha
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3.6
