Correct light-mark conversion

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = balor
-version = 0.1.1
+version = 0.1.2
 description = Balor
 long_description_content_type=text/markdown
 long_description = file: README.md
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 2 - Pre-Alpha
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
     Programming Language :: Python
